# keepassxc-proxy-rust

./: Cargo.toml  README.md
src/: main.rs  platform_unix.rs  platform_windows.rs  proxy_socket.rs
