[package]
name = "keepassxc-proxy"
version = "0.1.0"
authors = ["varjolintu <sami.vanttinen@protonmail.com>"]
keywords = ["native", "messaging", "host", "protocol", "keepassxc"]
license = "GPL-3.0"
repository = "https://github.com/varjolintu/keepassxc-proxy-rust"

[dependencies]
byteorder = "1.1.0"
nix = "0.24.0"

[target.'cfg(windows)'.dependencies]
named_pipe = "0.2"
