[package]
name = "keepassxc-proxy"
version = "0.2.0"
authors = ["varjolintu <sami.vanttinen@ahmala.org>"]
keywords = ["native", "messaging", "host", "protocol", "keepassxc"]
license = "GPL-3.0"
repository = "https://github.com/varjolintu/keepassxc-proxy-rust"

[dependencies]
byteorder = "1.1.0"
nix = { version = "0.29.0", features = ["socket"] }

[target.'cfg(windows)'.dependencies]
named_pipe = "0.2"
